Repair auth.ejs.

--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -5,7 +5,7 @@
 <body>
 
 <script type="text/javascript">
-    parent.postMessage({accessToken: "<%= refreshToken %>", refreshToken: "<%= accessToken %>"}, "*");
+    parent.postMessage({refreshToken: "<%= refreshToken %>", accessToken: "<%= accessToken %>"}, "*");
 </script>
 
 </body>
